# CNN_ReconocimientoDeDigitos

./: CMakeLists.txt
include/: cnn.h  conv_layer.h  fully_connected_layer.h  mnist_loader.h  pooling_layer.h  utils.h
src/: main.cpp  mnist_loader.cpp  utils.cpp
